--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="last-icons">
       <!-- Whitepaper (📄) -->
       <a class="icon-btn"
-         href="pdf-viewer.html?title=Whitepaper&pdf=assets/Whitepaper.pdf&bg=assets/General%20backgroud.png"
+         href="pdf-viewer.html?title=Whitepaper.png=assets/Whitepaper.png"
          target="_blank" rel="noopener"
          aria-label="Whitepaper" title="Whitepaper">
         <span>📄</span>
@@ -193,7 +193,7 @@
 
       <!-- Disclaimer (⚠️) -->
       <a class="icon-btn"
-         href="pdf-viewer.html?title=Disclaimer&pdf=assets/Disclaimer.pdf&bg=assets/General%20backgroud.png"
+         href="pdf-viewer.html?title=Disclaimer.png=assets/Disclaimer.png"
          target="_blank" rel="noopener"
          aria-label="Disclaimer" title="Disclaimer">
         <span>⚠️</span>
@@ -221,7 +221,7 @@
 
      <!-- Contact Us (📜) -->
 <a class="icon-btn"
-   href="pdf-viewer.html?title=Contact%20Us&pdf=assets/contact_us.pdf&bg=assets/General%20backgroud.png"
+   href="pdf-viewer.html?title=Contact%20Us=assets/contact_us.png"
    target="_blank" rel="noopener"
    aria-label="Contact Us" title="Contact Us">
   <span>📜</span>
