--- a/index.html
+++ b/index.html
@@ -183,17 +183,17 @@
   <section class="page last-page">
     <!-- Icon strip -->
     <div class="last-icons">
-      <!-- Whitepaper (📄) -->
+      <!-- Whitepaper (📄) -> shows assets/Whitepaper.png in viewer -->
       <a class="icon-btn"
-         href="pdf-viewer.html?title=Whitepaper&pdf=assets/Whitepaper.pdf&bg=assets/General%20backgroud.png"
+         href="pdf-viewer.html?title=Whitepaper&file=assets/Whitepaper.png"
          target="_blank" rel="noopener"
          aria-label="Whitepaper" title="Whitepaper">
         <span>📄</span>
       </a>
 
-      <!-- Disclaimer (⚠️) -->
+      <!-- Disclaimer (⚠️) -> shows assets/Disclaimer.png in viewer -->
       <a class="icon-btn"
-         href="pdf-viewer.html?title=Disclaimer&pdf=assets/Disclaimer.pdf&bg=assets/General%20backgroud.png"
+         href="pdf-viewer.html?title=Disclaimer&file=assets/Disclaimer.png"
          target="_blank" rel="noopener"
          aria-label="Disclaimer" title="Disclaimer">
         <span>⚠️</span>
@@ -209,7 +209,7 @@
         </svg>
       </a>
 
-      <!-- X (Twitter) SVG -->
+      <!-- X (Twitter) SVG) -->
       <a class="icon-btn"
          href="https://x.com/YourXHandle"
          target="_blank" rel="noopener"
@@ -219,9 +219,9 @@
         </svg>
       </a>
 
-      <!-- Contact Us (📜) -->
+      <!-- Contact Us (📜) -> shows assets/contact_us.png in viewer -->
       <a class="icon-btn"
-         href="contact.html"
+         href="pdf-viewer.html?title=Contact%20Us&file=assets/contact_us.png"
          target="_blank" rel="noopener"
          aria-label="Contact Us" title="Contact Us">
         <span>📜</span>
