--- a/index.html
+++ b/index.html
@@ -179,57 +179,54 @@
   <section class="page"><img src="assets/FAQ.png" alt="Frequently Asked Questions"></section>
   <section class="page"><img src="assets/TOKENIMICS.png" alt="Our Tokennomics"></section>
 
-  <!-- LAST PAGE with left-middle icons -->
-  <section class="page last-page">
-    <!-- Icon strip -->
-    <div class="last-icons">
-      <!-- Whitepaper (📄) -> shows assets/Whitepaper.png in viewer -->
-      <a class="icon-btn"
-         href="pdf-viewer.html?title=Whitepaper&file=assets/Whitepaper.png"
-         target="_blank" rel="noopener"
-         aria-label="Whitepaper" title="Whitepaper">
-        <span>📄</span>
-      </a>
+ <!-- LAST PAGE with left-middle icons -->
+<section class="page last-page">
+  <!-- Icon strip -->
+  <div class="last-icons">
+    <!-- Whitepaper -->
+    <a class="icon-btn"
+       href="pdf-viewer.html?title=Whitepaper&file=assets/Whitepaper.png"
+       target="_blank" rel="noopener"
+       aria-label="Whitepaper" title="Whitepaper">
+      <img src="assets/Button1.png" alt="Whitepaper" />
+    </a>
 
-      <!-- Disclaimer (⚠️) -> shows assets/Disclaimer.png in viewer -->
-      <a class="icon-btn"
-         href="pdf-viewer.html?title=Disclaimer&file=assets/Disclaimer.png"
-         target="_blank" rel="noopener"
-         aria-label="Disclaimer" title="Disclaimer">
-        <span>⚠️</span>
-      </a>
+    <!-- Disclaimer -->
+    <a class="icon-btn"
+       href="pdf-viewer.html?title=Disclaimer&file=assets/Disclaimer.png"
+       target="_blank" rel="noopener"
+       aria-label="Disclaimer" title="Disclaimer">
+      <img src="assets/Button2.png" alt="Disclaimer" />
+    </a>
 
-      <!-- Telegram (SVG) -->
-      <a class="icon-btn"
-         href="https://t.me/YourTelegramLink"
-         target="_blank" rel="noopener"
-         aria-label="Telegram" title="Telegram">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M9.04 15.49 8.9 19.3c.41 0 .58-.18.79-.4l1.93-1.87 4 2.93c.73.4 1.26.2 1.46-.68l2.64-12.37c.27-1.25-.45-1.74-1.24-1.43L3.2 10.1c-1.2.47-1.18 1.15-.2 1.46l4.2 1.31 9.76-6.16c.46-.28.88-.13.54.18z"/>
-        </svg>
-      </a>
+    <!-- Telegram -->
+    <a class="icon-btn"
+       href="https://t.me/YourTelegramLink"
+       target="_blank" rel="noopener"
+       aria-label="Telegram" title="Telegram">
+      <img src="assets/Button4.png" alt="Telegram" />
+    </a>
 
-      <!-- X (Twitter) SVG) -->
-      <a class="icon-btn"
-         href="https://x.com/YourXHandle"
-         target="_blank" rel="noopener"
-         aria-label="X (Twitter)" title="X (Twitter)">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M18.244 2H21L14.61 9.31 22 22h-6.24l-4.36-7.2L6.2 22H3l6.86-7.61L2 2h6.36l4 6.63L18.244 2Zm-1.09 18h1.67L8.93 4H7.2l9.954 16Z"/>
-        </svg>
-      </a>
+    <!-- X (Twitter) -->
+    <a class="icon-btn"
+       href="https://x.com/YourXHandle"
+       target="_blank" rel="noopener"
+       aria-label="X (Twitter)" title="X (Twitter)">
+      <img src="assets/Button5.png" alt="Twitter" />
+    </a>
 
-      <!-- Contact Us (📜) -> shows assets/contact_us.png in viewer -->
-      <a class="icon-btn"
-         href="pdf-viewer.html?title=Contact%20Us&file=assets/contact_us.png"
-         target="_blank" rel="noopener"
-         aria-label="Contact Us" title="Contact Us">
-        <span>📜</span>
-      </a>
-    </div>
+    <!-- Contact Us -->
+    <a class="icon-btn"
+       href="pdf-viewer.html?title=Contact%20Us&file=assets/contact_us.png"
+       target="_blank" rel="noopener"
+       aria-label="Contact Us" title="Contact Us">
+      <img src="assets/Button3.png" alt="Contact Us" />
+    </a>
+  </div>
 
-    <img src="assets/last slide.png" alt="socials">
-  </section>
+  <img src="assets/last slide.png" alt="socials">
+</section>
+
 
 </body>
 </html>
