--- a/index.html
+++ b/index.html
@@ -108,25 +108,31 @@
       gap:10px;
       z-index:10;
     }
-    .icon-btn{
-      display:inline-flex; align-items:center; justify-content:center;
-      width:44px; height:44px;
-      border-radius:12px;
-      background: rgba(255,255,255,0.92);
-      border:1px solid rgba(0,0,0,0.15);
-      box-shadow: 0 3px 10px rgba(0,0,0,0.15);
-      text-decoration:none;
-      transition: transform .15s ease, box-shadow .15s ease, background .2s, border-color .2s;
-    }
-    .icon-btn:hover{
-      transform: translateY(-2px);
-      box-shadow: 0 8px 22px rgba(0,0,0,0.22);
-      background:#fff; border-color: rgba(0,0,0,0.25);
-    }
-    .icon-btn svg, .icon-btn span{
-      width:24px; height:24px; fill: currentColor; color:#111; line-height:1;
-    }
-    .icon-btn span{ font-size:22px; }
+    /* Free, big image buttons (no box) */
+.icon-btn{
+  display: inline-block;
+  padding: 0;                 /* no inner padding */
+  background: transparent;    /* no background box */
+  border: 0;                  /* no border */
+  box-shadow: none;           /* no shadow */
+  width: auto; height: auto;  /* size by image */
+  transition: transform .15s ease;
+}
+.icon-btn:hover{
+  transform: translateY(-2px) scale(1.04);
+}
+
+/* Make the actual images big and crisp */
+.icon-btn img{
+  display: block;
+  width: 128px;     /* <- adjust to taste (e.g., 96–128px) */
+  height: auto;
+  object-fit: contain;
+}
+
+/* Slightly bigger spacing between icons */
+.last-icons{ gap: 14px; }
+
 
     /* Mobile tweak: nudge strip a bit higher */
     @media (max-width: 768px){
