--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
     <div class="last-icons">
       <a class="icon-btn" href="pdf-viewer.html?title=Whitepaper&file=assets/Whitepaper.png" target="_blank"><img src="assets/Button1.png" alt="Whitepaper"></a>
       <a class="icon-btn" href="pdf-viewer.html?title=Disclaimer&file=assets/Disclaimer.png" target="_blank"><img src="assets/Button2.png" alt="Disclaimer"></a>
+      <a class="icon-btn" href="pdf-viewer.html?title=How to buy&file=assets/How to buy steps.png" target="_blank"><img src="assets/Button6.png" alt="How to buy"></a>
       <a class="icon-btn" href="https://t.me/SAADSQ8" target="_blank"><img src="assets/Button4.png" alt="Telegram"></a>
       <a class="icon-btn" href="https://x.com/SQ8_SAAD" target="_blank"><img src="assets/Button5.png" alt="Twitter"></a>
       <a class="icon-btn" href="pdf-viewer.html?title=Contact%20Us&file=assets/contact_us.png" target="_blank"><img src="assets/Button3.png" alt="Contact Us"></a>
